loopdowhile.Poucet2.scala.error
Erreur de compilation :
Poucet2:11: error: ';' expected but '{' found.
  while(nbbiscuit>=3){
                     ^