loopdowhile.Poucet2.scala.code
var nbbiscuit=0
while (estSortie==false){
  do{
    forward()
     
    while(crossing==false)
    if (estSurBiscuit==true){
      nbbiscuit=nbbiscuit+1
    }  
  }
  while(nbbiscuit>=3){
    left()
  }
  while (nbbiscuit<3){
    right()
  }
	nbbiscuit=0
}

